--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,15 +1,19 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" color="transparent">
     <ion-tab-button tab="home" href="/tabs/home">
-      <ion-icon aria-hidden="true" name="home"></ion-icon>
+      <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="addtransaction" href="/tabs/addtransaction">
-      <ion-icon aria-hidden="true" name="add-circle"></ion-icon>
+      <ion-icon
+        aria-hidden="true"
+        size="large"
+        name="add-circle-outline"
+      ></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="smslog" href="/tabs/smslog">
-      <ion-icon aria-hidden="true" name="notifications-circle"></ion-icon>
+      <ion-icon aria-hidden="true" name="notifications-outline"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
