--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -124,7 +124,7 @@
                 <ion-label
                   [color]="transactionLog?.type===0?'success':'danger'"
                 >
-                  <h2>{{transactionLog?.amount}}</h2>
+                  <h2>Rs.{{transactionLog?.amount}}</h2>
                   <small>{{dateConverter(transactionLog?.createdAt)}}</small>
                 </ion-label>
 
@@ -143,7 +143,7 @@
                       {{getTransactionCategory(transactionLog?.category)}}
                     </h2>
                     <small
-                      >{{getTransactionType(transactionLog?.type)}} / {{
+                      >{{transactionLog?.account | uppercase}} / {{
                       getTransactionMode(transactionLog?.mode)}}</small
                     >
                   </ion-label>
