sms list gliching and curd needs work

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -116,6 +116,7 @@
             >
               <ion-item [button]="true" [id]="transactionLog.id">
                 <ion-icon
+                  class="ion-no-margin ion-margin-end"
                   slot="start"
                   size="large"
                   [name]="transactionLog?.type===0?'add-circle':'remove-circle'"
