sms feature implemented completely

--- a/src/app/signin/signin.page.html
+++ b/src/app/signin/signin.page.html
@@ -42,7 +42,12 @@
 
     <ion-row>
       <ion-col offset="4">
-        <ion-button fill="outline" shape="round" size="large" (click)="signin()"
+        <ion-button
+          color="success"
+          fill="outline"
+          shape="round"
+          size="large"
+          (click)="signin()"
           >Sign In</ion-button
         >
       </ion-col>
