--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -57,7 +57,12 @@
 
     <ion-row>
       <ion-col offset="4">
-        <ion-button fill="outline" shape="round" size="large" (click)="signup()"
+        <ion-button
+          color="success"
+          fill="outline"
+          shape="round"
+          size="large"
+          (click)="signup()"
           >Sign Up</ion-button
         >
       </ion-col>
