--- a/src/app/smsFeature/tab3.page.html
+++ b/src/app/smsFeature/tab3.page.html
@@ -65,7 +65,7 @@
       <ion-col>
         <ion-list [inset]="false" lines="full" class="transaction-list">
           <ion-item-sliding
-            *ngFor="let transactionLog of reverseList(user.smsList)"
+            *ngFor="let transactionLog of user.smsList|sortList"
           >
             <ion-item [button]="true" [id]="transactionLog.id">
               <ion-icon
@@ -77,7 +77,7 @@
               ></ion-icon>
               <ion-label [color]="transactionLog?.type===0?'success':'danger'">
                 <h2>Rs.{{transactionLog?.amount}}</h2>
-                <small>{{dateConverter(transactionLog?.createdAt)}}</small>
+                <small>{{transactionLog?.createdAt|fullDate}}</small>
               </ion-label>
 
               <ion-label slot="end" style="display: contents">
@@ -92,11 +92,11 @@
                   "
                 >
                   <small
-                    >{{transactionLog?.account}}/{{getTransactionMode(transactionLog?.mode)}}</small
+                    >{{transactionLog?.account}}/{{transactionLog?.mode|mode}}</small
                   >
                   <br />
                   <small
-                    >{{getTransactionCategory(transactionLog?.category)}} / {{
+                    >{{transactionLog?.category|category}} / {{
                     transactionLog?.merchant}}</small
                   >
                 </ion-label>
