after signin and signup user object in home tab is empty which makes sms list empty after adding transaction

--- a/src/app/home/tab1.page.html
+++ b/src/app/home/tab1.page.html
@@ -175,7 +175,7 @@
               >
                 <ng-template>
                   <ion-content class="ion-padding"
-                    >{{transactionLog?.merchant}}</ion-content
+                    >{{transactionLog?.body}}</ion-content
                   >
                 </ng-template>
               </ion-popover>
